# network

./: .gitignore  Dockerfile  deployment.yaml  readme.md
.github/workflows/: docker-image.yml
network_backend/: Dockerfile  pyproject.toml
network_backend/app/: main.py
network_backend/static/: index.html
network_backend/static/assets/: index-BA6WUE2s.css  index-BkLiSoaR.js
network_frontend/: index.html  package-lock.json  package.json  vite.config.ts
network_frontend/src/: App.tsx  main.tsx  vite-env.d.ts
network_frontend/src/components/: CheckPortSwitch.tsx  LoadingSpinner.tsx  NavBar.tsx  NavBarButton.tsx  PortCheckedCell.tsx  PortRow.tsx  PortTable.tsx  ProbeActivCell.tsx
network_frontend/src/models/: portChecked.ts  switchStatus.ts
