[project]
name = "network_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all,standard]>=0.115.6",
    "paramiko>=3.5.0",
    "pydantic>=2.10.5",
    "pydantic-extra-types>=2.10.2",
    "requests>=2.32.3",
]
